# llama-index-playground

./: README.md  index.py  pyproject.toml
context_augmentation/: index.py
context_augmentation/storage/june/: docstore.json  index_store.json
context_augmentation/storage/march/: docstore.json  index_store.json
context_augmentation/storage/sept/: docstore.json  index_store.json
hybrid_fusion_retriever/: index.py
qa_pattern/: index.py
qa_pattern/data/: 도시 및 주거환경정비법 시행규칙.txt  도시 및 주거환경정비법 시행령(대통령령)(제33677호)(20230822).txt  도시 및 주거환경정비법(법률)(제19560호)(20230718).txt
query_structured_data/: index.py  setup.py
rag_agent/: agent.py  index.py  tools.py
rag_agent/storage/: default__vector_store.json  docstore.json  index_store.json
rag_agent2/: agent.py  index.py  tools.py
semantic_search/: index.py
semantic_search/storage/: default__vector_store.json  docstore.json  index_store.json
summarization/: index.py
summarization/data/: docstore.json  index_store.json
summarization/storage/: docstore.json  index_store.json
web_scrapper/: index.py
web_scrapper/storage/https:/en.wikipedia.org/wiki/New_York_City?wprov=srpw1_1-New York was named in honor of whom ?/: docstore.json  index_store.json
wikipedia_tool/: index.py
